--- a/xhtml/relatorio.xhtml
+++ b/xhtml/relatorio.xhtml
@@ -4,13 +4,9 @@
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     </head>
     <body>
-        <style>
-            p{
-                text-align: justify;
-            }
-        </style>
         <div>
             <p>The <b>quick</b> <span style="font-size: 14pt;">brown</span> fox...</p>
             <p>Paragraph 2</p>
@@ -26,7 +22,19 @@
             <p>
                 Proin nonummy, lacus eget pulvinar lacinia, pede felis dignissim leo, vitae tristique magna lacus sit amet eros. Nullam ornare. Praesent odio ligula, dapibus sed, tincidunt eget, dictum ac, nibh. Nam quis lacus. Nunc eleifend molestie velit. Morbi lobortis quam eu velit. Donec euismod vestibulum massa. Donec non lectus. Aliquam commodo lacus sit amet nulla. Cras dignissim elit et augue. Nullam non diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Aenean vestibulum. Sed lobortis elit quis lectus. Nunc sed lacus at augue bibendum dapibus.
             </p>
-
+            <table> 
+                <tr> 
+                    <td width="25%" height="20%">Nome</td> 
+                    <td width="25%">Telefone</td> 
+                    <td width="25%">Endereço</td> 
+                    <td width="25%">Cep</td> </tr> 
+                <tr> 
+                    <td height="20%">Ricardo</td> 
+                    <td>(21) 9999-9999</td>
+                    <td>Rua Dois, casa 3.</td>
+                    <td>99999-999</td>
+                </tr> 
+            </table>           
         </div>
     </body>
 </html>
